--- a/index.html
+++ b/index.html
@@ -22,21 +22,17 @@
     </head>
 
     <body class="bodyAmanda">
-        <!-- Nav bar goes here -->
-        <nav class="navbar navbar-expand-lg navbar-light navPat">
-      
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <nav class="navbar navbar-light bg-black justify-content-between navPat">
-              <a class="navbar-brand" href="index.html">Home</a>
-              <form class="form-inline">
-                <a class="nav-item nav-link" href="fili.html">Finding the meaningful features</a>
-                <a class="nav-item nav-link" href="amanda.html">Markdown and Holiday Models</a>
-                <a class="nav-item nav-link" href="#"> Size v.s Sales Model</a>
-                <a class="nav-item nav-link" href="#"> Future Sales Model</a>
-                </form>
-              </nav>
+         <!-- Nav bar goes here -->
+    <nav class="navbar navbar-light bg-black justify-content-between navPat">
+      <a class="navbar-brand" href="index.html">Home</a>
+      <form class="form-inline">
+          <a class="nav-item nav-link" href="fili.html">Finding the Meaningful Features</a>
+          <a class="nav-item nav-link" href="amanda.html">Markdown and Holiday Models</a>
+          <a class="nav-item nav-link" href="Sales_Size.html"> Size v.s Sales Model</a>
+          <a class="nav-item nav-link" href="jacqueline.html"> Future Sales Model</a>
+      </form>
+  </nav>
+
                 <!-- <a class="nav-item nav-link" href="#">test</a> -->
               </div>
             </div>
