--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col-xs-12 col-md-9 borderPat">
                     <div id="plot" class="plot text-center"> 
                       
-                      <img src="../Images/HomePage.jpg", class="img-fluid">
+                      <img src="Images/HomePage.jpg", class="img-fluid">
 
                     </div>
                 </div>
