--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a class="nav-item nav-link" href="fili.html">Finding the Meaningful Features</a>
           <a class="nav-item nav-link" href="amanda.html">Markdown and Holiday Models</a>
           <a class="nav-item nav-link" href="Sales_Size.html"> Size v.s Sales Model</a>
-          <a class="nav-item nav-link" href="jacqueline.html"> Future Sales Model</a>
+          <a class="nav-item nav-link" href="jacqueline.html"> Time Series Model</a>
       </form>
   </nav>
 
