--- a/amanda.html
+++ b/amanda.html
@@ -60,7 +60,7 @@
 
                 </div>
                 <div class="article">
-                    <h3 class="text-center">K Knearest Neighbor Model </h3>
+                    <h3 class="text-center">K-nearest Neighbor Model </h3>
                     <p> Our goal for using this algorithm is to show how it can be used for classification. Since our only categorical values were "Isholiday": True/False
                         weekly sales and markdowns were used to prefict whether "it is a holiday" or "isnt a holiday."" </p>
                         <h4 class= "text center" >Bar Chart</h4>
