--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="col-xs-12 col-md-9 borderPat">
                     <div class="article">
                         <h2 class="text-center">Retail Sales Evaluation and Machine Learning </h2>
-                        <p>Machine Learning is an extremely useful tool that uses statistics in order to find patterns in large sets of data. We decided to preform a deep dive of existing "Retail Sales"
+                        <p>Machine Learning is an extremely useful tool that uses statistics in order to find patterns in large sets of data. We decided to perform a deep dive of existing "Retail Sales"
                           data using machine learning. First, we processed our dataset to evaluate the importance of each feature using various libraries in Python such as Pandas, Seaborn, Matplotlib, Numpy,Scipy, and OS. Next, we created 
                           several models for training and predictions. These models include LinearRegression, KNN-classifier, and ARIMA Time Series Forecasting.
                   
